--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <script src="./createProgress.js"></script>
 <script>
     var instance = new percentCircle("myCanvas",{
-        colorArr:["#ff0000","#fe0000"],  //颜色值必须是两个，可以为相同颜色，也可以是渐变的两个色值
+        colorArr:["#ffe000","#ff4f00"],  //颜色值必须是两个，可以为相同颜色，也可以是渐变的两个色值
         colorBg:'transparent', //半圆背景色 默认#ffffff
         linewidth:30,   //半圆的宽度
         r:120,
